// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default spa setup 1`] = `
Object {
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B": Object {
      "DependsOn": Array [
        "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleDefaultPolicyA42C156A",
        "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleDefaultPolicyA42C156A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationAuthFlowcheckauthProviderAD2E39F4",
                  "Parameter.Value",
                ],
              },
            },
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationAuthFlowparseauthProviderFAD7CF01",
                  "Parameter.Value",
                ],
              },
            },
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationAuthFlowrefreshauthProvider2F233848",
                  "Parameter.Value",
                ],
              },
            },
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationAuthFlowsignoutProvider0444513A",
                  "Parameter.Value",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleDefaultPolicyA42C156A",
        "Roles": Array [
          Object {
            "Ref": "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgenerator2790F624": Object {
      "DependsOn": Array [
        "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgeneratorServiceRoleB3E3AD6F",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgeneratorServiceRoleB3E3AD6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgeneratorServiceRoleB3E3AD6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomain78ACEC1A": Object {
      "DependsOn": Array [
        "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleDefaultPolicy66AD4FCD",
        "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleDefaultPolicy66AD4FCD": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cognito-idp:DescribeUserPool",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "UserPool6BA7E5F2",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleDefaultPolicy66AD4FCD",
        "Roles": Array [
          Object {
            "Ref": "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SpaAuthorizationAuthFlowCheckAuthWithConfigurationDD23EC43": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationUserPoolDomainCustomResourceE3CE9592",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "SpaAuthorizationSecretGeneratorCustomResource7B87C244",
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "SpaAuthorizationAuthFlowcheckauthProviderAD2E39F4",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowParseAuthWithConfiguration2E496D2B": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationUserPoolDomainCustomResourceE3CE9592",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "SpaAuthorizationSecretGeneratorCustomResource7B87C244",
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "SpaAuthorizationAuthFlowparseauthProviderFAD7CF01",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowRefreshAuthWithConfiguration8C113162": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationUserPoolDomainCustomResourceE3CE9592",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "SpaAuthorizationSecretGeneratorCustomResource7B87C244",
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "SpaAuthorizationAuthFlowrefreshauthProvider2F233848",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowSignOutWithConfiguration5E67C819": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "SpaAuthorizationUserPoolDomainCustomResourceE3CE9592",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "SpaAuthorizationSecretGeneratorCustomResource7B87C244",
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "SpaAuthorizationAuthFlowsignoutProvider0444513A",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowcheckauthProviderAD2E39F4": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "SpaAuthorizationAuthFlowcheckauthProviderCustomResourcePolicyEB70BE7B",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowcheckauthProviderCustomResourcePolicyEB70BE7B": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/check-auth/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SpaAuthorizationAuthFlowcheckauthProviderCustomResourcePolicyEB70BE7B",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SpaAuthorizationAuthFlowparseauthProviderCustomResourcePolicy730B5E35": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/parse-auth/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SpaAuthorizationAuthFlowparseauthProviderCustomResourcePolicy730B5E35",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SpaAuthorizationAuthFlowparseauthProviderFAD7CF01": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "SpaAuthorizationAuthFlowparseauthProviderCustomResourcePolicy730B5E35",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowrefreshauthProvider2F233848": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "SpaAuthorizationAuthFlowrefreshauthProviderCustomResourcePolicyA9156390",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowrefreshauthProviderCustomResourcePolicyA9156390": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/refresh-auth/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SpaAuthorizationAuthFlowrefreshauthProviderCustomResourcePolicyA9156390",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SpaAuthorizationAuthFlowsignoutProvider0444513A": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "SpaAuthorizationAuthFlowsignoutProviderCustomResourcePolicyB477C3F8",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationAuthFlowsignoutProviderCustomResourcePolicyB477C3F8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/sign-out/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SpaAuthorizationAuthFlowsignoutProviderCustomResourcePolicyB477C3F8",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SpaAuthorizationResponseHeadersPolicyA5002A50": Object {
      "Properties": Object {
        "ResponseHeadersPolicyConfig": Object {
          "CustomHeadersConfig": Object {
            "Items": Array [
              Object {
                "Header": "Cache-Control",
                "Override": true,
                "Value": "no-cache",
              },
            ],
          },
          "Name": "DummySpaAuthorizationResponseHeadersPolicyA39100DF",
          "SecurityHeadersConfig": Object {
            "ContentSecurityPolicy": Object {
              "ContentSecurityPolicy": "default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; connect-src 'self'",
              "Override": true,
            },
            "ContentTypeOptions": Object {
              "Override": true,
            },
            "FrameOptions": Object {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": Object {
              "Override": true,
              "ReferrerPolicy": "same-origin",
            },
            "StrictTransportSecurity": Object {
              "AccessControlMaxAgeSec": 31536000,
              "IncludeSubdomains": true,
              "Override": true,
              "Preload": true,
            },
            "XSSProtection": Object {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "SpaAuthorizationSecretGeneratorCustomResource7B87C244": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AllowedCharacters": "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-._~",
        "Length": 16,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgenerator2790F624",
            "Arn",
          ],
        },
      },
      "Type": "Custom::GenerateSecret",
      "UpdateReplacePolicy": "Delete",
    },
    "SpaAuthorizationUserPoolDomainCustomResourceE3CE9592": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomain78ACEC1A",
            "Arn",
          ],
        },
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "Custom::UserPoolDomain",
      "UpdateReplacePolicy": "Delete",
    },
    "UserPool6BA7E5F2": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_phone_number",
              "Priority": 1,
            },
            Object {
              "Name": "verified_email",
              "Priority": 2,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolName": "cloudfront-authorization-userpool",
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "UserPoolDomainD0EA232A": Object {
      "Properties": Object {
        "Domain": "cloudcomponents",
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
    "UserPoolUserPoolClient40176907": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "phone",
          "email",
          "profile",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "GenerateSecret": false,
        "PreventUserExistenceErrors": "ENABLED",
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
}
`;

exports[`default static-site setup 1`] = `
Object {
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B": Object {
      "DependsOn": Array [
        "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleDefaultPolicyA42C156A",
        "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleDefaultPolicyA42C156A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationAuthFlowcheckauthProviderA6235A8D",
                  "Parameter.Value",
                ],
              },
            },
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationAuthFlowparseauthProvider72D5CD13",
                  "Parameter.Value",
                ],
              },
            },
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationAuthFlowrefreshauthProvider4DB598E9",
                  "Parameter.Value",
                ],
              },
            },
            Object {
              "Action": Array [
                "lambda:GetFunction",
                "lambda:UpdateFunctionCode",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationAuthFlowsignoutProvider710213B2",
                  "Parameter.Value",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleDefaultPolicyA42C156A",
        "Roles": Array [
          Object {
            "Ref": "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationServiceRoleF04EA3EE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgenerator2790F624": Object {
      "DependsOn": Array [
        "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgeneratorServiceRoleB3E3AD6F",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgeneratorServiceRoleB3E3AD6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgeneratorServiceRoleB3E3AD6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomain78ACEC1A": Object {
      "DependsOn": Array [
        "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleDefaultPolicy66AD4FCD",
        "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleDefaultPolicy66AD4FCD": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cognito-idp:DescribeUserPool",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "UserPool6BA7E5F2",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleDefaultPolicy66AD4FCD",
        "Roles": Array [
          Object {
            "Ref": "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomainServiceRoleB79DDC89",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StaticSiteAuthorizationAuthFlowCheckAuthWithConfigurationAE070E16": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationUserPoolDomainCustomResourceC09DC823",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "StaticSiteAuthorizationSecretGeneratorCustomResource19F2EE49",
              },
              "\\",
  \\"clientSecret\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationRetrieveUserPoolClientSecret4CD67128",
                  "UserPoolClient.ClientSecret",
                ],
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "StaticSiteAuthorizationAuthFlowcheckauthProviderA6235A8D",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowParseAuthWithConfiguration9C15B36F": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationUserPoolDomainCustomResourceC09DC823",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "StaticSiteAuthorizationSecretGeneratorCustomResource19F2EE49",
              },
              "\\",
  \\"clientSecret\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationRetrieveUserPoolClientSecret4CD67128",
                  "UserPoolClient.ClientSecret",
                ],
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "StaticSiteAuthorizationAuthFlowparseauthProvider72D5CD13",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowRefreshAuthWithConfiguration636CFADB": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationUserPoolDomainCustomResourceC09DC823",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "StaticSiteAuthorizationSecretGeneratorCustomResource19F2EE49",
              },
              "\\",
  \\"clientSecret\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationRetrieveUserPoolClientSecret4CD67128",
                  "UserPoolClient.ClientSecret",
                ],
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "StaticSiteAuthorizationAuthFlowrefreshauthProvider4DB598E9",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowSignOutWithConfigurationCE2CDB41": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Configuration": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{
  \\"logLevel\\": \\"warn\\",
  \\"redirectPathSignIn\\": \\"/parseauth\\",
  \\"redirectPathAuthRefresh\\": \\"/refreshauth\\",
  \\"redirectPathSignOut\\": \\"/\\",
  \\"userPoolId\\": \\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",
  \\"clientId\\": \\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\",
  \\"oauthScopes\\": [
    \\"phone\\",
    \\"email\\",
    \\"profile\\",
    \\"openid\\",
    \\"aws.cognito.signin.user.admin\\"
  ],
  \\"cognitoAuthDomain\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationUserPoolDomainCustomResourceC09DC823",
                  "DomainName",
                ],
              },
              "\\",
  \\"cookieSettings\\": {
    \\"idToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"accessToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"refreshToken\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\",
    \\"nonce\\": \\"Path=/; Secure; HttpOnly; SameSite=Lax\\"
  },
  \\"nonceSigningSecret\\": \\"",
              Object {
                "Ref": "StaticSiteAuthorizationSecretGeneratorCustomResource19F2EE49",
              },
              "\\",
  \\"clientSecret\\": \\"",
              Object {
                "Fn::GetAtt": Array [
                  "StaticSiteAuthorizationRetrieveUserPoolClientSecret4CD67128",
                  "UserPoolClient.ClientSecret",
                ],
              },
              "\\"
}",
            ],
          ],
        },
        "FunctionName": Object {
          "Fn::Select": Array [
            6,
            Object {
              "Fn::Split": Array [
                ":",
                Object {
                  "Fn::GetAtt": Array [
                    "StaticSiteAuthorizationAuthFlowsignoutProvider710213B2",
                    "Parameter.Value",
                  ],
                },
              ],
            },
          ],
        },
        "Region": "us-east-1",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomWithConfigurationcloudcomponentscdklambdaatedgepatternwithconfigurationE415FB9B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::WithConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowcheckauthProviderA6235A8D": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "StaticSiteAuthorizationAuthFlowcheckauthProviderCustomResourcePolicyA7CBA911",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowcheckauthProviderCustomResourcePolicyA7CBA911": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/check-auth/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "StaticSiteAuthorizationAuthFlowcheckauthProviderCustomResourcePolicyA7CBA911",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StaticSiteAuthorizationAuthFlowparseauthProvider72D5CD13": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "StaticSiteAuthorizationAuthFlowparseauthProviderCustomResourcePolicyDAB54E6F",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowparseauthProviderCustomResourcePolicyDAB54E6F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/parse-auth/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "StaticSiteAuthorizationAuthFlowparseauthProviderCustomResourcePolicyDAB54E6F",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StaticSiteAuthorizationAuthFlowrefreshauthProvider4DB598E9": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "StaticSiteAuthorizationAuthFlowrefreshauthProviderCustomResourcePolicy2F46934C",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowrefreshauthProviderCustomResourcePolicy2F46934C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/refresh-auth/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "StaticSiteAuthorizationAuthFlowrefreshauthProviderCustomResourcePolicy2F46934C",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StaticSiteAuthorizationAuthFlowsignoutProvider710213B2": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "StaticSiteAuthorizationAuthFlowsignoutProviderCustomResourcePolicy9C7C883B",
      ],
      "Properties": Object {
        "Create": Any<String>,
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Any<String>,
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationAuthFlowsignoutProviderCustomResourcePolicy9C7C883B": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:us-east-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cloudcomponents/edge-lambda/Dummy/sign-out/c83d99d8def072b82738c0d40222a792527c17f94d",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "StaticSiteAuthorizationAuthFlowsignoutProviderCustomResourcePolicy9C7C883B",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StaticSiteAuthorizationResponseHeadersPolicy04BF3CFB": Object {
      "Properties": Object {
        "ResponseHeadersPolicyConfig": Object {
          "CustomHeadersConfig": Object {
            "Items": Array [
              Object {
                "Header": "Cache-Control",
                "Override": true,
                "Value": "no-cache",
              },
            ],
          },
          "Name": "DummyStaticSiteAuthorizationResponseHeadersPolicyC6087463",
          "SecurityHeadersConfig": Object {
            "ContentSecurityPolicy": Object {
              "ContentSecurityPolicy": "default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; connect-src 'self'",
              "Override": true,
            },
            "ContentTypeOptions": Object {
              "Override": true,
            },
            "FrameOptions": Object {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": Object {
              "Override": true,
              "ReferrerPolicy": "same-origin",
            },
            "StrictTransportSecurity": Object {
              "AccessControlMaxAgeSec": 31536000,
              "IncludeSubdomains": true,
              "Override": true,
              "Preload": true,
            },
            "XSSProtection": Object {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "StaticSiteAuthorizationRetrieveUserPoolClientSecret4CD67128": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "StaticSiteAuthorizationRetrieveUserPoolClientSecretCustomResourcePolicy75949B85",
      ],
      "Properties": Object {
        "Create": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"service\\":\\"CognitoIdentityServiceProvider\\",\\"action\\":\\"describeUserPoolClient\\",\\"parameters\\":{\\"UserPoolId\\":\\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",\\"ClientId\\":\\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\"},\\"physicalResourceId\\":{\\"id\\":\\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "-",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "-retrieved-client-secret\\"}}",
            ],
          ],
        },
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"service\\":\\"CognitoIdentityServiceProvider\\",\\"action\\":\\"describeUserPoolClient\\",\\"parameters\\":{\\"UserPoolId\\":\\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "\\",\\"ClientId\\":\\"",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "\\"},\\"physicalResourceId\\":{\\"id\\":\\"",
              Object {
                "Ref": "UserPool6BA7E5F2",
              },
              "-",
              Object {
                "Ref": "UserPoolUserPoolClient40176907",
              },
              "-retrieved-client-secret\\"}}",
            ],
          ],
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationRetrieveUserPoolClientSecretCustomResourcePolicy75949B85": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cognito-idp:DescribeUserPoolClient",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "UserPool6BA7E5F2",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "StaticSiteAuthorizationRetrieveUserPoolClientSecretCustomResourcePolicy75949B85",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "StaticSiteAuthorizationSecretGeneratorCustomResource19F2EE49": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AllowedCharacters": "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-._~",
        "Length": 16,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationsecretgenerator2790F624",
            "Arn",
          ],
        },
      },
      "Type": "Custom::GenerateSecret",
      "UpdateReplacePolicy": "Delete",
    },
    "StaticSiteAuthorizationUserPoolDomainCustomResourceC09DC823": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "SingletonLambdacloudcomponentscdkcloudfrontauthorizationuserpooldomain78ACEC1A",
            "Arn",
          ],
        },
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "Custom::UserPoolDomain",
      "UpdateReplacePolicy": "Delete",
    },
    "UserPool6BA7E5F2": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_phone_number",
              "Priority": 1,
            },
            Object {
              "Name": "verified_email",
              "Priority": 2,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolName": "cloudfront-authorization-userpool",
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "UserPoolDomainD0EA232A": Object {
      "Properties": Object {
        "Domain": "cloudcomponents",
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
    "UserPoolUserPoolClient40176907": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "phone",
          "email",
          "profile",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "GenerateSecret": true,
        "PreventUserExistenceErrors": "ENABLED",
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
}
`;
